
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct nm_send_footer {int string1; } ;
typedef int bool_t ;
typedef int XDR ;


 int FALSE ;
 int TRUE ;
 int xdr_wrapstring (int *,int *) ;

bool_t xdr_nm_send_footer(XDR *xdrs, struct nm_send_footer *objp)
{
 if(!xdr_wrapstring(xdrs, &objp->string1))
  return (FALSE);
 return (TRUE);
}
